fix compile.bat file

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ ffmpeg-gui.pyproj
 ffmpeg-gui.sln
 .temp/
 .vscode/
+build/
+dist/
+tree.txt
 ## ===========================================
 
 # User-specific files
